# measure_complexity

./: .clang-tidy  CMakeLists.txt  LICENSE  main.c
cJSON/: cJSON_Parse.c  cJSON_Parse.h  cJSON_Utils.h  cJSON_Utils_if_else-if_else.c  cJSON_Utils_inc_goto.c  cJSON_Utils_logic_with_function.c  cJSON_Utils_minimize.c  cJSON_Utils_minimize_createJsonPatch.c  cJSON_Utils_minimize_createJsonPatch_inlining.c  cJSON_Utils_minimize_createJsonPatch_inlining_refactoring_2-5_pro.c  cJSON_Utils_minimize_createJsonPatch_inlining_refactoring_gemini_2-5_pro.c  cJSON_Utils_minimize_createJsonPatch_inlining_refactoring_gemini_2-5_pro_v2.c  cJSON_Utils_minimize_createJsonPatch_inlining_refactoring_gemini_2-5_pro_v3.c  cJSON_Utils_minimize_createJsonPatch_specification.md  cJSON_Utils_minimize_getJsonItem.c  cJSON_Utils_minimize_inlining.c  cJSON_Utils_minimize_inlining.h  cJSON_Utils_minimize_inlining2.c  cJSON_Utils_minimize_inlining_refactoring.c  cJSON_Utils_minimize_inlining_refactoring_gemini_2-5_flash.c  cJSON_Utils_minimize_inlining_refactoring_gemini_2-5_flash_v2.c  cJSON_Utils_minimize_inlining_refactoring_gemini_2-5_pro.c  cJSON_Utils_minimize_inlining_refactoring_gemini_2-5_pro_v2.c  cJSON_Utils_minimize_inlining_refactoring_gemini_2-5_pro_v3.c  cJSON_Utils_minimize_inlining_refactoring_gemini_2-5_pro_v4.c  cJSON_Utils_minimize_inlining_refactoring_import_file.c  cJSON_Utils_minimize_parse_json.c  cJSON_Utils_minimize_parse_json_inlining.c  cJSON_Utils_minimize_parse_json_inlining_refactoring_gemini_2-5_pro.c  cJSON_Utils_minimize_parse_json_refactoring_gemini_2-5_pro.c  cJSON_Utils_minimize_refactoring_gemini_2-5_pro.c  from.json  result_readability-function-cognitive-complexity.txt
csv/: csv-if_else-if_else.c  csv.c  csv.h  csv_inc_goto.c  csv_inlining.c  csv_inlining_refactoring.c  csv_inlining_refactoring_gemini_2-5._pro.c  csv_inlining_refactoring_gemini_2-5_flash.c  csv_inlining_refactoring_import_file.c  csv_logic_with_function.c  csv_open_func.c  csv_original.c  result_readability-function-cognitive-complexity.txt
experiment_doc/: iniparser.md  iniparser_inlining.md  json.md  json_fix.md  json_inlining.md
ini_parser/: dictionary_del_func.c  dictionary_del_func.h  example.ini  iniparser.c  iniparser_inlining.c  iniparser_minimize.c  iniparser_minimize_inlining.c  iniparser_minimize_inlining_refactoring_gemini_2-5_pro.c  iniparser_minimize_inlining_refactoring_gemini_2-5_pro_v2.c  (+5 more)
(+23 files in other folders)
